<resources>
    <string name="app_name">CasHelper</string>
    <string name="entries_total_title">Totale entrate:</string>
    <string name="exits_total_title">Totale uscite:</string>
    <string name="total_title">Totale:</string>
    <string name="labeltotale">#tot</string>
    <string name="label_entries_totale">#entriestot</string>
    <string name="exits_label">#exitsTot</string>
    <string name="add_fab_home_desc">aggiungi item</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="back_month_button">back_month</string>
    <string name="next_month_button">next_month_button</string>
    <string name="incoming_title">Entrate</string>
    <string name="entries_title">Entrate</string>
    <string name="add_title">Aggiungi Transazione</string>
    <string name="category_spinner">Seleziona una categoria</string>
    <string name="value_add">Inserisci importo</string>
    <string name="description_add">Descrizione (opzionale)</string>
    <string name="incoming_add_item">Entrate</string>
    <string name="exits_add_item">Uscite</string>
    <string name="delete_button">Annulla</string>
    <string name="euro">Euro</string>

    //menu
    <string name="menu_home">menu_home</string>
    <string name="menu_uscite">Uscite</string>
    <string name="menu_entrate">Entrate</string>
    <string name="menu_categorie">Categorie</string>
    <string name="menu_tema">Tema</string>
    <string name="menu_crediti">Crediti</string>
    <string name="confirm_button">Aggiungi</string>
    <string name="update_item">Dettagli Transazione</string>
    <string name="update_button">MODIFICA</string>
    <string name="deleteItem">Elimina</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="appwidget_text">CasHelper</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Widget con le informazioni sulle finanze del mese corrente</string>
    <string name="stringTransaction">Inserire una transazione</string>
    <string name="empty_img">Empty img</string>
    <string name="empty_chart_string">Aggiungi una transazione per il grafico</string>

    <string name="new_category">Nuova categoria:</string>
    <string name="category_name">Nome categoria</string>
    <string name="add_category">Aggiungi categoria</string>
    <string name="month_year_widget">Month Year</string>
    <string name="incoming_widget_string">Entrate:</string>
    <string name="outflow_widget_string">Uscite:</string>
    <string name="total_widget_string">Totale:</string>
    <string name="add_from_widget">Aggiungi</string>
</resources>