<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu">

    <item
        android:id="@+id/Spese"
        app:showAsAction="never"
        android:title="@string/menu_uscite"/>
    <item
        android:id="@+id/Entrate"
        app:showAsAction="never"
        android:title="@string/menu_entrate"/>
    <item
        android:id="@+id/Categorie"
        app:showAsAction="never"
        android:title="@string/menu_categorie"/>
    <item
        android:id="@+id/Crediti"
        app:showAsAction="never"
        android:title="@string/menu_crediti"/>

    <item
        android:id="@+id/themeMode"
        app:showAsAction="ifRoom"
        android:title="Tema"
        style= "@style/MenuStyle_mode"
        />
</menu>