<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/home"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.CasHelper"
    android:background="?attr/backgroundColor">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/midline_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/container_home"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline0"
        android:layout_margin="2pt">
        <TextView
            android:id="@+id/month_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:theme="@style/TextStyle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/year_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:theme="@style/TextStyle"
            app:layout_constraintLeft_toRightOf="@id/month_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/month_text"
            android:layout_margin="2pt"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/back_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:theme="@style/Theme.CasHelper"
        app:backgroundTint="?attr/colorBackgroundFloating"
        app:icon="@drawable/baseline_arrow_back"
        android:contentDescription="@string/back_month_button"
        app:elevation="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline0"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/next_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:theme="@style/Theme.CasHelper"
        app:backgroundTint="?attr/colorBackgroundFloating"
        app:icon="@drawable/baseline_arrow_next"
        android:contentDescription="@string/next_month_button"
        app:elevation="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline0"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/container_home"
        app:layout_constraintTop_toBottomOf="@id/guideline0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline1"
        android:layout_margin="10pt">
        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="293dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline1"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        android:background="@drawable/container_home"
        android:layout_margin="10pt"
        android:scaleType="fitCenter">
        <TextView
            android:id="@+id/entries_text_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entries_total_title"
            android:layout_marginStart="10pt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:theme="@style/TextStyle"
            />
        <TextView
            android:id="@+id/exits_text_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exits_total_title"
            android:layout_marginStart="10pt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/entries_text_home"
            app:layout_constraintBottom_toTopOf="@id/total_text_home"
            android:theme="@style/TextStyle"
            />
        <TextView
            android:id="@+id/total_text_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_title"
            android:layout_marginStart="10pt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/exits_text_home"
            app:layout_constraintBottom_toBottomOf="parent"
            android:theme="@style/TextStyle"
            />
        <TextView
            android:id="@+id/entries_label_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_entries_totale"
            android:layout_marginStart="10pt"
            app:layout_constraintLeft_toRightOf="@id/entries_text_home"
            app:layout_constraintBaseline_toBaselineOf="@id/entries_text_home"
            android:theme="@style/TextStyle"

            />
        <TextView
            android:id="@+id/exits_label_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exits_label"
            android:layout_marginStart="12.5pt"
            app:layout_constraintLeft_toRightOf="@id/exits_text_home"
            app:layout_constraintBaseline_toBaselineOf="@id/exits_text_home"
            android:theme="@style/TextStyle"
            />
        <TextView
            android:id="@+id/total_label_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_entries_totale"
            android:layout_marginStart="33pt"
            app:layout_constraintLeft_toRightOf="@id/total_text_home"
            app:layout_constraintBaseline_toBaselineOf="@id/total_text_home"
            android:theme="@style/TextStyle"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/container_home"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        android:layout_marginStart="10pt"
        android:layout_marginEnd="10pt"
        android:theme="@style/TextStyle"
        />
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:theme="@style/Theme.CasHelper"
        app:backgroundTint="?attr/colorBackgroundFloating"
        app:icon="@drawable/add_fab_home"
        android:contentDescription="@string/add_fab_home_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
