<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/container_home"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/container_home"
        android:padding="10dp">

        <TextView
            android:id="@+id/add_category_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/new_category"
            app:drawableStartCompat="@drawable/add_category_icon"
            android:drawablePadding="2dp"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="@color/black" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            app:startIconDrawable="@drawable/add_fab_home"
            app:endIconMode="clear_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:counterEnabled="true"
            app:counterMaxLength="30">

            <EditText
                android:id="@+id/text_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="20"
                android:hint="@string/category_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/FAKE_add_button"
            style = "@style/disable_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textField"
            android:text="@string/add_category"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/add_button"
            style = "@style/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textField"
            android:text="@string/add_category"
            android:textAlignment="center"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <Button
            android:id="@+id/exit_button"
            style="@style/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="5dp"
            android:text="@string/delete_button"
            android:textAlignment="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>